# esp-iot-comm

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  idf_component.yml
examples/provisioning/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/provisioning/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/iot_comm/: binary_reader.h  iot_comm.h
include/iot_comm/captive_portal/: captive_portal.h
include/iot_comm/crypto/: aes.h  hash.h  hkdf.h  p256.h  sha.h  utils.h
include/iot_comm/mDNS/: mDNS.h
include/iot_comm/ota/: ota.h
include/iot_comm/provisioning/: wifi.h
include/iot_comm/utils/: binary.h  network.h
private_include/: challenge.h  http_helpers.h  ip_address.h  rate_limit.h  user.h
src/: binary_reader.cpp  challenge.cpp  iot_comm.cpp  ip_address.cpp  rate_limit.cpp  user.cpp
src/captive_portal/: captive_portal.cpp
src/captive_portal/web/: .gitignore  App.css  App.svelte  app.js  index.html  main.js  package-lock.json  package.json  vite.config.dev-keys.js  vite.config.helpers.js  vite.config.js
src/captive_portal/web/crypto/: aes.js  ecp.js  hash.js  helpers.js  hkdf.js  random.js
src/crypto/: aes.cpp  hash.cpp  hkdf.cpp  p256.cpp  sha.cpp  utils.cpp
src/http/: http_helpers.cpp
src/mDNS/: mDNS.cpp
src/ota/: ota.cpp
src/provisioning/: wifi.cpp
src/utils/: binary.cpp  network.cpp
test/: CMakeLists.txt  RUNNING_TESTS.md  sdkconfig.defaults  sdkconfig.defaults.v5
test/main/: CMakeLists.txt  idf_component.yml  test_crypto.cpp  test_iot_comm.cpp  test_mdns.cpp  test_util_binary.cpp  test_util_network.cpp
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  test_iot_comm.cpp
